--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mock exam app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ng build --base-href '/mock-exam-app/'"
   },
   "repository": {
     "type": "git",
