--- a/mock-exam-app/package.json
+++ b/mock-exam-app/package.json
@@ -4,9 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href '/mock-exam-app/'",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "package": "npm run clean && npm run build && npm run copy-artefacts",
+    "clean": "gulp clean",
+    "copy-artefacts": "gulp copy"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +28,7 @@
     "autoprefixer": "^10.3.4",
     "bootstrap": "^4.5.0",
     "glob-parent": "^6.0.1",
+    "gulp-cli": "^2.3.0",
     "rxjs": "~6.6.0",
     "set-value": ">=4.0.1",
     "tslib": "^2.3.0",
@@ -36,6 +40,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "gulp": "^4.0.2",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
