--- a/mock-exam-app/package.json
+++ b/mock-exam-app/package.json
@@ -13,17 +13,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~15.0.3",
+    "@angular/animations": "^15.0.3",
     "@angular/cdk": "^15.0.2",
-    "@angular/common": "~15.0.3",
-    "@angular/compiler": "~15.0.3",
-    "@angular/core": "~15.0.3",
-    "@angular/forms": "~15.0.3",
-    "@angular/localize": "~15.0.3",
+    "@angular/common": "^15.0.3",
+    "@angular/compiler": "^15.0.3",
+    "@angular/core": "^15.0.3",
+    "@angular/forms": "^15.0.3",
+    "@angular/localize": "^15.0.3",
     "@angular/material": "^15.0.2",
-    "@angular/platform-browser": "~15.0.3",
-    "@angular/platform-browser-dynamic": "~15.0.3",
-    "@angular/router": "~15.0.3",
+    "@angular/platform-browser": "^15.0.3",
+    "@angular/platform-browser-dynamic": "^15.0.3",
+    "@angular/router": "^15.0.3",
     "@ng-bootstrap/ng-bootstrap": "^14.0.0",
     "autoprefixer": "^10.3.4",
     "bootstrap": "^4.5.0",
@@ -35,9 +35,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.10",
-    "@angular/cli": "~13.3.10",
-    "@angular/compiler-cli": "~15.0.3",
+    "@angular-devkit/build-angular": "^14.2.10",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler-cli": "^15.0.3",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "gulp": "^4.0.2",
