--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build --base-href /mock-exam-app/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "package": "npm run build -- --output-path=doc/"
+    "package": "npm run build -- --output-path=docs/"
   },
   "private": true,
   "dependencies": {
