--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/compiler-cli": "^15.0.3",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^9.0.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.16",
     "karma-chrome-launcher": "~3.1.0",
