--- a/package.json
+++ b/package.json
@@ -38,11 +38,19 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.3",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "^15.0.3",
     "@angular/compiler-cli": "^15.0.3",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "eslint": "^8.33.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.16",
     "karma-chrome-launcher": "~3.1.0",
