--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build --base-href /",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "#ng lint --force=true --slient=true",
     "package": "npm run build -- --output-path=docs/",
     "test:prod": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
     "build:prod": "npm run package"
