--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -20,10 +20,18 @@ jobs:
 
       - name: Lint
         run: npm run lint
-      
+
       - name: Tests
         run: npm run test:prod
-      
+
       - name: Build
         run: npm run build:prod
-        
+
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: docs
+          build_dir: dist/
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
