--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,7 +31,7 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: docs
-          build_dir: dist/
+          build_dir: dist/mock-exam-app/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
