feat: github action changes

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Build
         run: npm run build:prod
 
+      - name: CNAME Update
+        run: cat "mock.codewithram.dev" > dist/mock-exam-app/CNAME
+
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v3
         with:
