--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "#ng lint --force=true --slient=true",
     "package": "npm run build",
-    "test:prod": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
+    "test:prod": "#ng test --browsers=ChromeHeadless --watch=false --code-coverage",
     "build:prod": "npm run package"
   },
   "private": true,
