--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mock-exam-app",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,7 +11,8 @@
     "package": "npm run build -- --output-path=docs/",
     "cname": "echo 'mock.codewithram.dev' > docs/CNAME",
     "test:prod": "#ng test --browsers=ChromeHeadless --watch=false --code-coverage",
-    "build:prod": "npm run package",
+    "set:version": "npm --no-git-tag-version version patch",
+    "build:prod": "npm run set:version && npm run package",
     "package:prod": "npm run package && npm run cname"
   },
   "private": true,
