--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "#ng lint --force=true --slient=true",
-    "package": "npm run build -- --output-path=docs/",
+    "package": " npm run set:version && npm run build -- --output-path=docs/",
     "cname": "echo 'mock.codewithram.dev' > docs/CNAME",
     "test:prod": "#ng test --browsers=ChromeHeadless --watch=false --code-coverage",
     "set:version": "npm --no-git-tag-version version patch",
