--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -20,6 +20,9 @@ jobs:
 
       - name: Lint
         run: npm run lint
+        
+      - name: Build
+        run: npm run build
 
       - name: Tests
         run: npm run test:prod
